--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          <a href="https://semester-project-homepage.netlify.app/">Home</a>
          <a href="https://semester-project-about.netlify.app/">About</a>
          <a href="https://semester-project-menu.netlify.app/">Menu</a>
-         <a href="">Order</a>
+         <a href="https://semester-project-order.netlify.app/">Order</a>
        </div>
 
 </body>
